deps/v8/test/message/fail/destructuring-undefined-number-property.out
*%(basename)s:5: TypeError: Cannot destructure 'undefined' as it is undefined.
var { 1: x } = undefined;
               ^
TypeError: Cannot destructure 'undefined' as it is undefined.
    at *%(basename)s:5:10
